--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>Hello</h1>
-    <footer>Built by Moyinoluwa Owoeye</footer>
+    <footer>
+      coded by
+      <a href="https://github.com/Moredebbs" target="_blank"
+        >Moyinoluwa Owoeye</a
+      >
+      hosted on
+      <a
+        href="https://app.netlify.com/sites/mi-clima-app/deploys/65fb4458c9fa881c2318b7fe"
+        target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
