--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
       <a href="https://github.com/Moredebbs" target="_blank"
         >Moyinoluwa Owoeye</a
       >
-      hosted on
+      is
+      <a href="https://github.com/Moredebbs/mi-clima"
+        >open-sourced on Github
+      </a>
+      and
+
       <a
         href="https://app.netlify.com/sites/mi-clima-app/deploys/65fb4458c9fa881c2318b7fe"
         target="_blank"
-        >Netlify</a
+        >hosted on Netlify</a
       >
     </footer>
   </body>
