Added the HTML to the project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>mi clima</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <header>
+      <input type="search" placeholder="Enter a city.." />
+      <input type="submit" value="Search" />
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>Thursday 23:32, moderate rain <br />Humidity: 87%, Wind: 7.2km/h</p>
+      </div>
+      <div>🌤️ 12°C</div>
+    </main>
+
     <footer>
       coded by
       <a href="https://github.com/Moredebbs" target="_blank"
