styled the main container

--- a/index.html
+++ b/index.html
@@ -3,37 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=h1, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>mi clima</title>
   </head>
   <body>
-    <header>
-      <input type="search" placeholder="Enter a city.." />
-      <input type="submit" value="Search" />
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>Thursday 23:32, moderate rain <br />Humidity: 87%, Wind: 7.2km/h</p>
-      </div>
-      <div>🌤️ 12°C</div>
-    </main>
+    <div class="weather-app">
+      <header>
+        <input type="search" placeholder="Enter a city.." />
+        <input type="submit" value="Search" />
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Thursday 23:32, moderate rain <br />Humidity: 87%, Wind: 7.2km/h
+          </p>
+        </div>
+        <div>🌤️ 12°C</div>
+      </main>
 
-    <footer>
-      coded by
-      <a href="https://github.com/Moredebbs" target="_blank"
-        >Moyinoluwa Owoeye</a
-      >
-      is
-      <a href="https://github.com/Moredebbs/mi-clima"
-        >open-sourced on Github
-      </a>
-      and
+      <footer>
+        coded by
+        <a href="https://github.com/Moredebbs" target="_blank"
+          >Moyinoluwa Owoeye</a
+        >
+        is
+        <a href="https://github.com/Moredebbs/mi-clima"
+          >open-sourced on Github
+        </a>
+        and
 
-      <a
-        href="https://app.netlify.com/sites/mi-clima-app/deploys/65fb4458c9fa881c2318b7fe"
-        target="_blank"
-        >hosted on Netlify</a
-      >
-    </footer>
+        <a
+          href="https://app.netlify.com/sites/mi-clima-app/deploys/65fb4458c9fa881c2318b7fe"
+          target="_blank"
+          >hosted on Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
