--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
+            id="search-form-input"
             class="search-form-input"
             placeholder="Enter a city.."
             required
@@ -29,7 +30,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Paris</h1>
+            <h1 class="weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
               Thursday 23:32, moderate rain <br />Humidity:
               <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
@@ -60,6 +61,7 @@
           >hosted on Netlify</a
         >
       </footer>
+      <script src="src/index.js"></script>
     </div>
   </body>
 </html>
