--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Thursday 23:32, moderate rain <br />Humidity:
-              <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              <span id="time"></span>, <span id="description"> </span><br />
+              Humidity:<strong id="humidity"></strong> , Wind:
+              <strong id="wind"></strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
